# ccproxy

./: .env.example  .envrc  .gitignore  .ignore  .mcp.json  .pre-commit-config.yaml  CLAUDE-COMPREHENSIVE.md  CLAUDE-OPTIMIZED.md  CLAUDE-VALIDATION.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SUMMARY.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  ccproxy.py  ccproxy.yaml  ccproxy_config.md  claude-auth.md  compose.yaml  config.yaml.example  custom_callbacks.py  demo_config.yaml  package-lock.json  prd.md  pyproject.toml  request-direct.zsh  request-litellm-corrected.zsh  request-litellm.zsh  requirements.txt  review.md  tour.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.pre-commit-scripts/: check-examples-match-templates.py
.taskmaster/: CLAUDE.md  config.json  state.json
.taskmaster/docs/: PRD_v2.md
.taskmaster/docs/research/: 2025-07-29_best-practices-for-implementing-a-litellm-proxy-se.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
arc/demo/: run_demo.sh  test_ccproxy_routing.py  test_claude_wrapper.py
demo/: README.md  custom_callbacks.py  demo_config.yaml  demo_requests.py  litellm_integration_demo.py  start_litellm_proxy.sh  test_ccproxy_routing.py  test_claude_wrapper.py
docs/: all-timelines-corrected-final.md  ant-api-test.zsh  api.md  architecture.md  ccproxy-test-background.zsh  ccproxy-test-large-context.zsh  ccproxy-test-thinking.zsh  ccproxy_config.md  ccproxy_config_v2.md  ccproxy_install.md  claude-code-raw-request.txt  configuration.md  examples.md  extending.md  litellm-hook-usage.md  mitm-review.md  prd-old.md  troubleshooting.md  tyro-guide  usage.md
docs/caching/: CLAUDE.md  README.md  all-flows-visualization.md  all-timelines-corrected-final.md  all-timelines-final.md  all_flow_timelines_20250805_223652.md  all_flow_timelines_20250805_224859.md  all_flow_timelines_20250805_225245.md  all_flow_timelines_20250805_230530.md  all_flow_timelines_20250805_230719.md  all_flow_timelines_20250805_231808.md  analyze_cache_breakpoints.py  cache-breakpoint-visualizer-updated.md  cache-breakpoint-visualizer.md  cache_analysis_report_20250805_222932.txt  cache_analysis_report_20250805_223652.txt  cache_analysis_report_20250805_224859.txt  cache_analysis_report_20250805_225245.txt  cache_analysis_report_20250805_230530.txt  cache_analysis_report_20250805_230719.txt  cache_analysis_report_20250805_231808.txt  complete-flow-analysis-corrected.md  complete-flow-analysis.md  debug_flow2.py
docs/caching/captured/: flow_1.json  flow_10.json  flow_11.json  flow_12.json  flow_13.json  flow_14.json  flow_15.json  flow_16.json  flow_17.json  flow_18.json  flow_19.json  flow_2.json  flow_20.json  flow_21.json  flow_22.json  flow_23.json  flow_24.json  flow_25.json  flow_26.json  flow_27.json  flow_28.json  flow_29.json  flow_3.json  flow_30.json  flow_31.json  flow_4.json  flow_5.json  flow_6.json  flow_7.json  flow_8.json  flow_9.json
docs/captured-2/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/examples/: README.md  ccproxy.yaml  config.yaml  custom_rule.py  example_ccproxy.yaml
docs/llms/: cache-breakpoint-visualizer-prompt.md  context-system-tour.md  google-ai-caching-guide.md  google-ai-context-caching-guide-v2.md  google-ai-context-caching-guide.md  litellm_caching_manual.md  model_alias.md  prd.md  prompt_caching_docs.md
docs/mitm/: 1_haiku_quota.md  3_opus_resume.md  4_haiku_bash-prefix.md  5_haiku_extract-paths.md  7_opus_convo_turn.md  8_opus_convo_turn.md
docs/mitm/captures/: CLAUDE.md  anthropic_prompt_caching_guide.md
docs/mitm/compacted/: 1_request.txt  1_response.txt  2_request.txt  2_response.txt  3_request.txt  3_response.txt  4_request.txt  4_response.txt  5_request.txt  5_response.txt  6_request.txt  6_response.txt
docs/mitm/raw/: 1_haiku_quota.txt  2_haiku_summary.txt  3_opus_resume.txt  6_opus_convo_turn.txt
docs/mitm/resumed/: 1_request.txt  1_response.txt  2_haiku_summary.md  2_request.txt  2_response.txt  3_request.txt  3_response.txt  4_request.txt  4_response.txt  5_request.txt  5_response.txt  6_opus_convo_turn.md  (+6 more)
examples/: README.md  cc-api-req.zsh  config_usage_demo.py  custom_rule.py  hot_reload_demo.py  hot_reload_router_demo.py
scripts/: README.md  cache_analyzer.py  claude-mitm.zsh  mitm_save_requests.py  run-claude.sh  setup-certificates.sh  start-proxy.sh  test-convo.txt
src/ccproxy/: __init__.py  __main__.py  ab_testing.py  cache.py  classifier.py  claude_integration.py  claude_wrapper.py  cli.py  cli_tyro.py  config.py  context_hooks.py  context_manager.py  handler.py  hooks.py  install.py  litellm_callback.py  llm_router.py  metrics.py  provider_metadata.py  router.py  rules.py  singleton.py  types.py  users.py  utils.py  watcher.py
stubs/: pydantic_settings.pyi  tiktoken.pyi
stubs/fasteners/: __init__.pyi
stubs/httpx/: __init__.pyi
stubs/litellm/: __init__.pyi  proxy.pyi
stubs/psutil/: __init__.pyi
stubs/rich/: __init__.pyi  console.pyi  panel.pyi  text.pyi
stubs/tyro/: __init__.pyi  extras.pyi
templates/: README.md  ccproxy.service
tests/: __init__.py  conftest.py  test_ab_testing.py  test_cache.py  test_classifier.py  test_classifier_integration.py  test_claude_integration.py  test_claude_wrapper.py  test_cli.py  test_config.py  test_context_hooks.py  test_context_manager.py  test_cost_tracking.py  test_edge_cases.py  test_env.py  test_extensibility.py  test_handler.py  test_handler_logging.py  test_hooks.py  test_hot_reload_router.py  test_litellm_integration.py  test_main.py  test_metrics.py  test_oauth_forwarding.py  test_oauth_refresh.py  test_provider_metadata.py  test_retry_and_cache.py  test_router.py  test_router_helpers.py  test_rules.py  test_session_id_extraction.py  test_shell_integration.py  test_users.py  test_utils.py  test_watcher.py
(+33 files in other folders)
