[project]
name = "ccproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "starbased-co", email = "s@starbased.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ccproxy = "ccproxy:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
